add lint gradle (#3)
* add lint gradle

* add lint gradle2

* add lint gradle3

* add lint gradle4

* add lint gradle5

* add lint gradle6

* add lint gradle7

* add lint gradle8

* add lint gradle9

* add lint gradle10

* add lint gradle11

* add lint gradle12