@@ -26,7 +26,7 @@ android {
             isMinifyEnabled = false
             proguardFiles(
                 getDefaultProguardFile("proguard-android-optimize.txt"),
-                "proguard-rules.pro"
+                "proguard-rules.pro",
             )
         }
     }
@@ -50,14 +50,7 @@ android {
     }
 }
 
-//val ktlint by configurations.creating
-
 dependencies {
-//    ktlint("com.pinterest.ktlint:ktlint-cli:1.0.1") {
-//        attributes {
-//            attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
-//        }
-//    }
     implementation(libs.core.ktx)
     implementation(libs.lifecycle.runtime.ktx)
     implementation(libs.activity.compose)
@@ -75,34 +68,4 @@ dependencies {
     debugImplementation(libs.ui.test.manifest)
 }
 
-//val ktlintCheck by tasks.registering(JavaExec::class) {
-//    group = LifecycleBasePlugin.VERIFICATION_GROUP
-//    description = "Check Kotlin code style"
-//    classpath = ktlint
-//    mainClass.set("com.pinterest.ktlint.Main")
-//    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
-//    args(
-//        "**/src/**/*.kt",
-//        "**.kts",
-//        "!**/build/**",
-//    )
-//}
-//
-//tasks.check {
-//    dependsOn(ktlintCheck)
-//}
-//
-//tasks.register<JavaExec>("ktlintFormat") {
-//    group = LifecycleBasePlugin.VERIFICATION_GROUP
-//    description = "Check Kotlin code style and format"
-//    classpath = ktlint
-//    mainClass.set("com.pinterest.ktlint.Main")
-//    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
-//    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
-//    args(
-//        "-F",
-//        "**/src/**/*.kt",
-//        "**.kts",
-//        "!**/build/**",
-//    )
-//}
+apply(from = "${projectDir }/lint.gradle.kts")
